# ivyea-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/nginx/: agent.ivyea.com.conf
docs/: Amazon专业知识库推进方案.md  IvyeaAgent产品化路线图.md  使用与操作文档.md  对标Codex-Claude-Hermes改造计划.md  部署指南.md
docs/examples/: amazon-ads-report.json  amazon-traffic-experiment.json  knowledge-evidence.json
ivyea_agent/: __init__.py  account_diagnosis.py  action_queue.py  actions.py  ads_evidence.py  agent_loop.py  agent_tools.py  alerts.py  audit.py  chat_input.py  chat_tui.py  chat_ui.py  cli.py  cli_code.py  code_agent.py  code_review.py  commands.py  competitor_audit.py  config.py  context.py  critique.py  doctor.py  engineering_context.py  evals.py  executor.py  git_workflow.py  guardrails.py  hooks.py  image_audit.py  knowledge.py  knowledge_evidence.py  knowledge_governance.py  knowledge_quality.py  knowledge_sync.py  lingxing_cache.py  lingxing_datasets.py  lingxing_openapi.py  lingxing_optimizer.py  lingxing_report.py  lingxing_write.py  (+52 more)
ivyea_agent/knowledge_base/: amazon_ads_capabilities.json  index.json  knowledge_evidence_schema.json  knowledge_quality_cases.json  knowledge_sources.json
ivyea_agent/knowledge_base/amazon_ads/: amazon_dsp.md  amazon_marketing_cloud.md  attribution_boundaries.md  bid_stack_and_auction.md  bidding_budget_reports.md  bidding_rules.md  display_ads.md  experiment_design.md  match_types.md  metrics_and_denominators.md  negative_targeting.md  sponsored_brands.md  sponsored_products_reports.md  sponsored_products_targeting.md  sponsored_products_targeting_guide.md
ivyea_agent/knowledge_base/brand/: brand_registry.md  transparency.md
ivyea_agent/knowledge_base/community/: operator_patterns.md
ivyea_agent/knowledge_base/fba/: dangerous_goods_ca.md  dangerous_goods_diagnostics.md  dangerous_goods_eu.md  dangerous_goods_mx.md  (+4 more)
ivyea_agent/providers/: __init__.py  anthropic_provider.py  base.py  bedrock_provider.py  chain.py  codex_provider.py  copilot_provider.py  deepseek.py  gemini_code_assist_provider.py  gemini_provider.py  openai_compat.py
ivyea_agent/rule_engine_scripts/: analyze_search_term_decisions.py
scripts/: build_offline_bundle.py  build_standalone.py  install.ps1  install.sh  sync_portal_docs.py
site/: CNAME  docs.html  index.html  install.html  portal-data.json  styles.css
tests/: conftest.py  test_account_diagnosis.py  test_action_queue.py  test_actions.py  test_ads_evidence.py  test_agent_discipline.py  test_alerts_schedule.py  test_anthropic_oauth.py  test_anthropic_provider.py  test_anthropic_thinking.py  test_bedrock_provider.py  test_build_offline_bundle.py  test_build_standalone.py  test_chat_tui.py  test_chat_ui.py  test_chat_ui_streaming.py  test_checkpoint.py  test_code_agent.py  test_code_edit_tools.py  test_code_nav_tools.py  test_code_review.py  test_codex_provider.py  test_commands_and_hooks.py  test_competitor_audit.py  test_config.py  test_context_sessions.py  test_copilot_provider.py  test_doctor.py  test_engineering_context.py  test_eval_regression.py  test_evals.py  test_exec_sandbox.py  test_gemini_code_assist_provider.py  test_gemini_provider.py  test_git_workflow.py  test_guardrails.py  test_image_audit.py  test_knowledge_base.py  test_knowledge_citations.py  test_knowledge_evidence.py  (+60 more)
(+71 files in other folders)
