[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ivyea-agent"
version = "0.2.0"
description = "Ivyea Agent — 自托管的亚马逊运营 CLI Agent（只读巡检：CSV + 领星 OpenAPI 店铺维度）"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "httpx>=0.27",
    "prompt_toolkit>=3.0",
    "cryptography>=42",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
anthropic = ["anthropic>=0.69"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
ivyea = "ivyea_agent.cli:main"

[tool.setuptools]
packages = ["ivyea_agent", "ivyea_agent.providers", "ivyea_agent.rule_engine_scripts"]

[tool.setuptools.package-data]
"ivyea_agent.rule_engine_scripts" = ["*.csv"]
